<resources>
    <string name="app_name">DriveLog</string>
    <string name="driver_diary_title">Driver Diary</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="add_trip">Add Trip</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="no_trips">No trips for this date.</string>
    <string name="trips_count">Trips</string>
    <string name="revenue">Revenue</string>
    <string name="commission">Commission</string>
    <string name="net_income">Net income</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_card">Card</string>
    <string name="trip_time_range">%1$s - %2$s</string>
    <string name="trip_commission">Commission: %1$s</string>
    <string name="money_value">%1$s</string>
    <string name="trip_id">Trip ID</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="amount">Amount</string>
    <string name="payment">Payment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="datetime_hint">YYYY-MM-DD HH:mm or ISO date-time</string>
    <string name="select_datetime">Select date and time</string>
    <string name="daily_summary">Daily summary</string>
    <string name="trips">Trips</string>
    <string-array name="payment_labels">
        <item>@string/payment_cash</item>
        <item>@string/payment_card</item>
    </string-array>
</resources>
